# containers

./: CMakeLists.txt  CMakePresets.json  README.md  cpp.hint  todo.txt  vcpkg.json
Containers/: CMakeLists.txt  arena_allocator.cpp  arena_allocator.hpp  array.hpp  misc.hpp  span.hpp  span_iterator.hpp  stack_buffer_allocator.hpp  vector.hpp
benchmarks/: CMakeLists.txt  bm_bector_stackbuf.cpp  bm_mixed_vector.cpp  bm_sorting.cpp  bm_stack_pmr.cpp  bm_vec_list.cpp  bm_vector.cpp  bm_vector2.cpp  bm_vector_stackbuf.cpp  compiler_pragmas.hpp  main.cpp
cmake/: containers-config.cmake  containers.pc.in
containers/: CMakeLists.txt  allocator.hpp  allocator_concepts.hpp  arena_allocator.hpp  arena_memory_resource.cpp  arena_memory_resource.hpp  arena_memory_resource_pmr.hpp  arena_memory_resource_pool.hpp  arena_mmr.cpp  arena_mmr.hpp  arena_mmr_allocator.hpp  arena_mmr_pool.hpp  arena_pmr.hpp  array.hpp  binary_heap.hpp  bst.hpp  bst_iterator.hpp  bst_node.hpp  bubble_sort.hpp  bucket_sort.hpp  buffer_mmr.hpp  buffer_pmr.hpp  contiguous_container_common_methods.hpp  contiguous_container_mixins.hpp  counting_sort.hpp  dlist.hpp  heap_sort.hpp  insertion_sort.hpp  iterator_boilerplate.hpp  linked_vector.hpp  linked_vector_iterator.hpp  linked_vector_segment.hpp  memory_resource.hpp  memory_resource_allocator.hpp  memory_resource_concepts.hpp  merge_sort.hpp  misc.hpp  mmr_allocator.hpp  multi_arena_pmr.cpp  multi_arena_resource.cpp  (+22 more)
containers/preprocessor/: noexcept_release_def.hpp  noexcept_release_undef.hpp  platform_def.hpp
tests/: CMakeLists.txt  configure_warning_pragmas.hpp  container_definition.hpp  container_test_traits.hpp  sorting_tests.hpp  test_arena_allocator.cpp  test_array.cpp  test_binary_heap.cpp  test_bst.cpp  test_bubble_sort.cpp  test_buffer_memory_resource.cpp  test_container_single_elem_iterators.hpp  test_dlist.cpp  test_linked_vector.cpp  test_misc.cpp  test_multi_arena_resource.cpp  test_polymorphic_allocator.cpp  test_rbset.cpp  test_slist.cpp  test_sort.cpp  test_span.cpp  test_stack_buffer_allocator.cpp  test_stack_pmr.cpp  test_static_vector.cpp  test_vector.cpp  test_vector.hpp  test_vector2.cpp  vector_container_traits.hpp
